--- a/c2s2/index.html
+++ b/c2s2/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="utf-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
-  <title>Web Fundamentals 7</title>
+  <title>Web Fundamentals 2</title>
 
   
 
@@ -33,7 +33,7 @@
   <div class="container">
 
     <div class="page-header">
-  <h1>Web Fundamentals 7 <small>A few extras</small></h1>
+	<a href ="/contents/"><img src="/assets/code61_logo_66x66.png" ></a><h1>Web Fundamentals 2 <small>A few extras</small></h1>
 </div>
 
 <div class="tabbable tabs-left">
@@ -123,15 +123,15 @@
 <li>
 <p>In the console try the following:</p>
 
-<pre><code> $('h1').hide()
- $('h1').show()
- $('h1').css('color', '#f00')
- $('h1').css('color', '#ff0')
- $('h1').css('font-size', '80px')
- $('h1').css('font-size', '8px')
- $('h1').css('text-align', 'right')
- $('h1').fadeOut()
- $('h1').fadeIn()</code></pre>
+<pre><code> $(&amp;#39;h1&amp;#39;).hide()
+ $(&amp;#39;h1&amp;#39;).show()
+ $(&amp;#39;h1&amp;#39;).css(&amp;#39;color&amp;#39;, &amp;#39;#f00&amp;#39;)
+ $(&amp;#39;h1&amp;#39;).css(&amp;#39;color&amp;#39;, &amp;#39;#ff0&amp;#39;)
+ $(&amp;#39;h1&amp;#39;).css(&amp;#39;font-size&amp;#39;, &amp;#39;80px&amp;#39;)
+ $(&amp;#39;h1&amp;#39;).css(&amp;#39;font-size&amp;#39;, &amp;#39;8px&amp;#39;)
+ $(&amp;#39;h1&amp;#39;).css(&amp;#39;text-align&amp;#39;, &amp;#39;right&amp;#39;)
+ $(&amp;#39;h1&amp;#39;).fadeOut()
+ $(&amp;#39;h1&amp;#39;).fadeIn()</code></pre>
 </li>
 
 <li>
@@ -189,7 +189,7 @@
 
 <pre><code> ruby --version</code></pre>
 
-<p>It should tell you the version of ruby that’s installed. If it doesn’t say anything you’re in trouble!</p>
+<p>It should tell you the version of ruby that&#39;s installed. If it doesn&#39;t say anything you&#39;re in trouble!</p>
 </li>
 </ol>
 </div>
