--- a/c3prep/index.html
+++ b/c3prep/index.html
@@ -33,7 +33,7 @@
   <div class="container">
 
     <div class="page-header">
-  <h1>Course Preparation <small>Prepare to ruby!</small></h1>
+	<a href ="/contents/"><img src="/assets/code61_logo_66x66.png" ></a><h1>Course Preparation <small>Prepare to ruby!</small></h1>
 </div>
 
 <div class="tabbable tabs-left">
@@ -102,7 +102,7 @@
 <ul>
 <li>On a Mac open Terminal (Applications &gt; Terminal)</li>
 
-<li>On Windowns open ‘Command Prompt with Ruby on Rails’ (this should have been installed by rails installer)</li>
+<li>On Windowns open &#39;Command Prompt with Ruby on Rails&#39; (this should have been installed by rails installer)</li>
 </ul>
 </li>
 
@@ -117,7 +117,7 @@
  git version 1.8.4
  $ </code></pre>
 
-<p>If it doesn’t print out your git version you have a problem - email your instructor!</p>
+<p>If it doesn&#39;t print out your git version you have a problem - email your instructor!</p>
 </li>
 
 <li>
@@ -131,7 +131,7 @@
  ruby 1.9.3p448 (2013-06-27 revision 41675) [x86_64-darwin12.4.1]
  $</code></pre>
 
-<p>If it doesn’t print out your ruby version you have a problem - email your instructor!</p>
+<p>If it doesn&#39;t print out your ruby version you have a problem - email your instructor!</p>
 </li>
 </ol>
 </div>
@@ -182,7 +182,7 @@
 <p>If you don’t have a compiler already you need to install Apple’s Command Line Tools - either directly or by installing XCode. The options for doing this are described in the <a href="http://installfest.railsbridge.org/installfest/install_xcode">Railsbridge Installfest</a>. Those options are also covered in <a href="http://www.moncefbelyamani.com/how-to-install-xcode-homebrew-git-rvm-ruby-on-mac/">Moncef’s post</a> as Step 1 - note the special instructions for those on Snow Leopard.</p>
 <div class='exercise alert alert-info'><strong>Task:</strong> 
 
-<p>If you don’t have gcc, install it following one of the sets of instructions above.</p>
+<p>If you don&#39;t have gcc, install it following one of the sets of instructions above.</p>
 
 </div>
 <h3 id="step_two_install_homebrew">Step Two: Install Homebrew</h3>
@@ -195,7 +195,7 @@
 </li>
 
 <li>
-<p>Scroll down until you find the ‘Install Homebrew’ section and follow the instructions. It should be as simple as pasting</p>
+<p>Scroll down until you find the &#39;Install Homebrew&#39; section and follow the instructions. It should be as simple as pasting</p>
 
 <pre><code> ruby -e &amp;quot;$(curl -fsSL https://raw.github.com/mxcl/homebrew/go)&amp;quot;</code></pre>
 
@@ -230,7 +230,7 @@
  git version 1.8.4
  $ </code></pre>
 
-<p>If it doesn’t print out your git version you have a problem - ask in the forum!</p>
+<p>If it doesn&#39;t print out your git version you have a problem - ask in the forum!</p>
 </li>
 
 <li>
@@ -255,7 +255,7 @@ git config --global user.email &amp;quot;Your Email Address&amp;quot;</code></pr
 
 <pre><code>brew install rbenv
 brew install ruby-build
-echo 'eval &amp;quot;$(rbenv init -)&amp;quot;' &amp;gt;&amp;gt; ~/.bash_profile</code></pre>
+echo &amp;#39;eval &amp;quot;$(rbenv init -)&amp;quot;&amp;#39; &amp;gt;&amp;gt; ~/.bash_profile</code></pre>
 </li>
 
 <li>
@@ -463,7 +463,7 @@ If you have 'GitHub for Windows' or 'GitHub for Mac' you might already have an s
 </li>
 
 <li>
-<p>Move back into the coding course folder. This time don’t type out my_new_folder - just type out the first few letters and hit <code>Tab</code>:</p>
+<p>Move back into the coding course folder. This time don&#39;t type out my_new_folder - just type out the first few letters and hit <code>Tab</code>:</p>
 
 <pre><code>$ cd my_new_folder</code></pre>
 </li>
