--- a/c3s3/index.html
+++ b/c3s3/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="utf-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
-  <title>Web Programming with Ruby 3</title>
+  <title>Introduction to Ruby</title>
 
   
 
@@ -33,7 +33,7 @@
   <div class="container">
 
     <div class="page-header">
-  <h1>Web Programming with Ruby 3 <small>Arrays</small></h1>
+	<a href ="/contents/"><img src="/assets/code61_logo_66x66.png" ></a><h1>Introduction to Ruby <small>Arrays</small></h1>
 </div>
 
 <div class="tabbable tabs-left">
@@ -241,7 +241,7 @@ a #=&gt; [1, 2, nil, nil, nil, nil, 5]</code></pre>
 <span class='n'>long_words</span>  <span class='c1'>#=&gt; [&#39;hello&#39;, &#39;today&#39;]</span>
 <span class='n'>short_words</span> <span class='c1'>#=&gt; [&#39;how&#39;, &#39;are&#39;, &#39;you&#39;]</span>
 </code></pre></div>
-<p><small>Please note: the summing and categorising examples above can be made much neater with the use of the array methods <code>inject</code> and <code>select</code>. We’ll leave that for another day though </small></p>
+<p><small>Please note: the summing and categorising examples above can be made much neater with the use of the array methods <code>inject</code> and <code>select</code>. We&#39;ll leave that for another day though </small></p>
 <div class='exercise alert alert-info'><strong>Task:</strong> 
 
 <p>Take another look through the code examples above. Check you really understand how they work. Try them out in <code>irb</code>, to check they work as advertised!</p>
@@ -293,15 +293,15 @@ a #=&gt; [1, 2, nil, nil, nil, nil, 5]</code></pre>
 <ol>
 <li><strong>Fork, then clone</strong> the code for this exercise <a href='https://github.com/code61/sinatra_c3s3'>https://github.com/code61/sinatra_c3s3</a>.</li>
 
-<li>Add the code to the body of <code>todo.erb</code>, so that the <code>@todos</code> display as an ordered list.</li>
+<li>Add code to the body of <code>todo.erb</code>, so that the <code>@todos</code> display as an ordered list.</li>
 
 <li>Add, commit and push your code to Github.</li>
 
-<li>Add the code to the body of <code>schedule.erb</code>, so that the items in the <code>@schedule</code> display as rows in a table. Note that <code>@schedule</code> is an <em>array of arrays</em> - you’ll need to iterate over the first array, and within the loop use the normal ways of accessing elements of an array pull out the items.</li>
+<li>Add code to the body of <code>schedule.erb</code>, so that the items in the <code>@schedule</code> display as rows in a table. Note that <code>@schedule</code> is an <em>array of arrays</em> - you&#39;ll need to iterate over the first array, and within the loop use the normal ways of accessing elements of an array pull out the items.</li>
 
 <li>Add, commit and push your code to Github.</li>
 
-<li>Take a look at the <code>get '/rsvps'</code> block. Try the <code>CSV.read</code> bit in irb, to see what it does. Have a go at writing the code to categorise rsvps into acceptances/rejections and count them.</li>
+<li>Take a look at the <code>get &amp;#39;/rsvps&amp;#39;</code> block. Try the <code>CSV.read</code> bit in irb, to see what it does. Have a go at writing the code to categorise rsvps into acceptances/rejections and count them.</li>
 
 <li>Update the <code>rsvps.erb</code> view, so that the right information is displayed.</li>
 
@@ -343,7 +343,7 @@ a #=&gt; [1, 2, nil, nil, nil, nil, 5]</code></pre>
 </div><div class='exercise alert alert-info'><strong>Task:</strong> 
 
 <ol>
-<li>Link the bootstrap stylesheet you’ll find in <code>public/dist/css/bootstrap.css</code> into the <code>head</code> of <code>todo.erb</code> and <code>schedule.erb</code>.</li>
+<li>Link the bootstrap stylesheet you&#39;ll find in <code>public/dist/css/bootstrap.css</code> into the <code>head</code> of <code>todo.erb</code> and <code>schedule.erb</code>.</li>
 </ol>
 
 </div>
