--- a/c4s1/index.html
+++ b/c4s1/index.html
@@ -33,7 +33,7 @@
   <div class="container">
 
     <div class="page-header">
-  <h1>Further Web Programming with Ruby <small></small></h1>
+	<a href ="/contents/"><img src="/assets/code61_logo_66x66.png" ></a><h1>Further Web Programming with Ruby <small>Better logic</small></h1>
 </div>
 
 <div class="tabbable tabs-left">
@@ -116,7 +116,7 @@
 
 <li>Familiarise yourself with the app, by looking through the code and running the app from the command line (<code>ruby app.rb</code>).</li>
 
-<li>See if you can identify other places where logic could be cleaned up.</li>
+<li>See if you can identify other places where the logic could be cleaned up.</li>
 </ol>
 </div>
 	</div>
@@ -166,17 +166,17 @@
 
 <li>Using the code above fill out the <code>first_name</code> function.</li>
 
-<li>Open <code>irb</code> and load in the file by running <code>load 'names.rb'</code>.</li>
+<li>Open <code>irb</code> and load in the file by running <code>load &amp;#39;names.rb&amp;#39;</code>.</li>
 
 <li>Try the function out, by calling it in irb.</li>
 
-<li>Close <code>irb</code> and run the tests we’ve provided for the function by running <code>rspec spec/first_name_spec.rb</code>.</li>
+<li>Close <code>irb</code> and run the tests we&#39;ve provided for the function by running <code>rspec spec/first_name_spec.rb</code>.</li>
 
 <li>Now try and write the body of the <code>last_name</code> function. Follow the same procedure of trying in irb, then running the test <code>rspec spec/last_name_spec.rb</code>.</li>
 
 <li>(Ext) Improve your <code>last_name</code> function, so that it can cope with composite last names (treating everything after the first name as the last name). Test your solution by running <code>rspec spec/ext_last_name_spec.rb</code></li>
 
-<li>(Ext) Work through the functions in <code>date.rb</code>. Test your solutions running the tests in files <code>spec/month_spec.rb</code>, <code>spec/last_digit_spec.rb</code>, <code>spec/penultimate_digit_spec.rb</code>, <code>spec/ordinal_suffix_spec.rb</code> and <code>spec/date_in_words_spec.rb</code>.</li>
+<li>(Ext) Work through the functions in <code>dates.rb</code>. Test your solutions running the tests in files <code>spec/month_spec.rb</code>, <code>spec/last_digit_spec.rb</code>, <code>spec/penultimate_digit_spec.rb</code>, <code>spec/ordinal_suffix_spec.rb</code> and <code>spec/date_in_words_spec.rb</code>.</li>
 </ol>
 </div>
 	</div>
@@ -232,7 +232,7 @@
 <ol>
 <li>Open <code>more_functions.rb</code> and begin to work your way throught the functions in the file.</li>
 
-<li>For each function you write, reload the file into irb to try it out: <code>load 'more_functions.rb'</code> (run this <strong>inside</strong> <code>irb</code>).</li>
+<li>For each function you write, reload the file into irb to try it out: <code>load &amp;#39;more_functions.rb&amp;#39;</code> (run this <strong>inside</strong> <code>irb</code>).</li>
 
 <li>For each function you write, run the appropriate test e.g.: <code>rspec spec/multiply_and_sum_spec.rb</code> (run this <strong>outside</strong> <code>irb</code>, on the command line).</li>
 
@@ -254,9 +254,9 @@
 <ol>
 <li>Open <code>app.rb</code> in Sublime Text.</li>
 
-<li>Uncomment the commented out <code>post</code> block at the bottom, and comment out the other one. This is how we want the code to look, but currently the functions aren’t there to make this work.</li>
+<li>Uncomment the commented out <code>post</code> block at the bottom, and comment out the other one. This is how we want the code to look, but currently the functions aren&#39;t there to make this work.</li>
 
-<li>Uncomment the line <code>require './helper_functions'</code> at the top of <code>app.rb</code></li>
+<li>Uncomment the line <code>require &amp;#39;./helper_functions&amp;#39;</code> at the top of <code>app.rb</code></li>
 
 <li>Open the file <code>helper_functions.rb</code> in Sublime Text. Complete the functions so that the app works as before.</li>
 </ol>
