--- a/c4s2/index.html
+++ b/c4s2/index.html
@@ -33,7 +33,7 @@
   <div class="container">
 
     <div class="page-header">
-  <h1>Further Web Programming with Ruby <small></small></h1>
+	<a href ="/contents/"><img src="/assets/code61_logo_66x66.png" ></a><h1>Further Web Programming with Ruby <small>Even better logic</small></h1>
 </div>
 
 <div class="tabbable tabs-left">
@@ -145,7 +145,7 @@
 
 <li>Install the gems for the app: <code>bundle install</code>.</li>
 
-<li>Have a quick look at the commented out section at the bottom of <code>app.rb</code> to get an idea of where we’re going.</li>
+<li>Have a quick look at the commented out section at the bottom of <code>app.rb</code> to get an idea of where we&#39;re going.</li>
 </ol>
 </div>
 	</div>
@@ -200,13 +200,13 @@
 </ul>
 <div class='exercise alert alert-info'><strong>Task:</strong>
 <ol>
-<li>Clone down the code for the session: <a href='https://github.com/tomclose/exercises_c4s2'>https://github.com/tomclose/exercises_c4s2</a></li>
+<li>Clone down the code for the session: <a href='https://github.com/code61/exercises_c4s2.git'>https://github.com/code61/exercises_c4s2.git</a></li>
 
 <li>Run <code>bundle install</code> to grab the required gems.</li>
 
 <li>Have a look at <code>circle.rb</code> in sublime text:
 <ul>
-<li>load it into irb: <code>load './circle.rb'</code></li>
+<li>load it into irb: <code>load &amp;#39;./circle.rb&amp;#39;</code></li>
 
 <li>create a circle: <code>c = Circle.new(5)</code></li>
 
@@ -244,7 +244,7 @@
 
 <li>Run the tests to check it works.</li>
 
-<li>Use the <code>Guess</code> class you’ve just written to help write the missing methods in <code>mastermind.rb</code></li>
+<li>Use the <code>Guess</code> class you&#39;ve just written to help write the missing methods in <code>mastermind.rb</code></li>
 
 <li>Run the mastermind tests to check it works.</li>
 </ul>
@@ -319,7 +319,7 @@
 <ul>
 <li>Copy your <code>Person</code> class from the exercise into <code>sinatra_c4s2/person.rb</code>.</li>
 
-<li>Uncomment the <code>require './person'</code> at the top of <code>app.rb</code>.</li>
+<li>Uncomment the <code>require &amp;#39;./person&amp;#39;</code> at the top of <code>app.rb</code>.</li>
 
 <li>Rewrite the person code in the <code>post</code> block to use your class.</li>
 
@@ -333,7 +333,7 @@
 <ul>
 <li>Write the necessary code in <code>event.rb</code>.</li>
 
-<li>Uncomment the <code>require './event'</code> at the top of <code>app.rb</code>.</li>
+<li>Uncomment the <code>require &amp;#39;./event&amp;#39;</code> at the top of <code>app.rb</code>.</li>
 
 <li>Rewrite the event code in the <code>post</code> block.</li>
 
@@ -447,7 +447,7 @@
 
 <pre><code> $ ruby main.rb</code></pre>
 
-<p>If you see the text &quot;Everything worked ok!&quot;, you’re good to go!</p>
+<p>If you see the text &quot;Everything worked ok!&quot;, you&#39;re good to go!</p>
 </li>
 </ol>
 </div>
