--- a/course3.html
+++ b/course3.html
@@ -94,7 +94,11 @@
 </ul>
 </li>
 
-<li><a href="c3s3">Session 3</a> + Arrays, iterating <!-- + Building up an in-memory data store (using a constant?) -->
+<li><a href="c3s3">Session 3</a>
+<ul>
+<li>Arrays, iterating</li>
+</ul>
+<!-- + Building up an in-memory data store (using a constant?) -->
 <ul>
 <li>Reading in from a CSV file</li>
 
