--- a/index.html
+++ b/index.html
@@ -35,8 +35,9 @@
     <div class='hero-unit'>
   <img src='assets/logo.png'>
   <h1>code61</h1>
-  <p>Open-source Coding Workshops</p>
+	<a href = "/contents/"><p>Open-source Coding Workshops</p></a>
 </div>
+
 
 
   </div> <!-- /container -->
