--- a/c1prep/index.html
+++ b/c1prep/index.html
@@ -33,7 +33,7 @@
   <div class="container">
 
     <div class="page-header">
-  <h1>Course Preparation <small>Getting you set up and ready to go!</small></h1>
+	<a href ="/contents/"><img src="/assets/code61_logo_66x66.png" ></a><h1>Course Preparation <small>Getting you set up and ready to go!</small></h1>
 </div>
 
 <div class="tabbable tabs-left">
@@ -52,7 +52,7 @@
 		
 	
 		
-		<li><a href="#3_github_account" data-toggle="tab">git & GitHub </a></li>
+		<li><a href="#3_github_account" data-toggle="tab">GitHub account </a></li>
 		
 	
 		
@@ -84,10 +84,10 @@
 <p>The tabs on the left hand side will take you through installing the software you’ll need for the course. Instructions are given in blue boxes.</p>
 <div class='exercise alert alert-info'><strong>Task:</strong> 
 
-<p>The blue boxes tell you what you need to do. Read them carefully!</p>
+<p>The blue boxes tell you what you need to do!</p>
 
 </div>
-<p>If you have any problems, please email your course instructor!</p>
+<p>If you have any problems, please contact the tech team!</p>
 
 	</div>
 
@@ -143,23 +143,17 @@
 	<div class="tab-pane " id="3_github_account">
 	
 
-		<h2>git & GitHub</h2>
+		<h2>GitHub account</h2>
 		
 <p>Git is a program that helps with the management of code. It means that you completely avoid the situation where you end up with files called <code>team_contacts_v1</code>, <code>team_contacts_v2</code> etc. It also allows you to share your code with others and collaborate on code in an efficient way.</p>
 
 <p>GitHub is a site that makes sharing code part of git really easy. It is the go-to choice both for startups and open-source software projects. (There are several other sites that are similar to GitHub e.g. <a href="https://bitbucket.org">BitBucket</a>, but GitHub is the most widely used.)</p>
 
 <p>GitHub also allows you to put a static website online for free, using <a href="http://pages.github.com/">GitHub Pages</a>. We will be making use of this feature during the course.</p>
+<div class='exercise alert alert-info'><strong>Task:</strong> 
 
-<h3 id="sourcetree">SourceTree</h3>
+<p>Sign up for a GitHub account at <a href='https://github.com/'>https://github.com/</a>. Make sure you <strong>know your password</strong> to avoid awkward moments in class!</p>
 
-<p>git itself is the sort of program that you have to run by typing commands into your computer’s command line. At some point, you will need to know how to do this but, for the time being, we’re going to use a <em>git client</em> - an point-and-click application to make git easier. In particular, we’re going to be using a free git client called SourceTree. Downloading SourceTree will install both the git command line progam and the point-and-click application.</p>
-<div class='exercise alert alert-info'><strong>Task:</strong>
-<ol>
-<li>Sign up for a GitHub account at <a href='https://github.com/'>https://github.com/</a>. Make sure you <strong>know your password</strong> to avoid awkward moments in class!</li>
-
-<li>Download <a href='http://www.sourcetreeapp.com/'>SourceTree</a> for Windows or Mac. If you’re using linux, contact your course instructor.</li>
-</ol>
 </div>
 	</div>
 
@@ -189,7 +183,7 @@
 </li>
 </ol>
 </div>
-<p>Look forward to seeing you on Tuesday!</p>
+<p>Look forward to seeing you at the first session!</p>
 
 	</div>
 
