--- a/c3s2/index.html
+++ b/c3s2/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="utf-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
-  <title>Intro to Ruby 2</title>
+  <title>Introduction to Ruby</title>
 
   
 
@@ -33,7 +33,7 @@
   <div class="container">
 
     <div class="page-header">
-  <h1>Intro to Ruby 2 <small>Adding logic to app</small></h1>
+	<a href ="/contents/"><img src="/assets/code61_logo_66x66.png" ></a><h1>Introduction to Ruby <small>Adding logic to app</small></h1>
 </div>
 
 <div class="tabbable tabs-left">
@@ -159,7 +159,7 @@
 
 <li>Run the app from the command line (<code>ruby app.rb</code>), to see if you were right.</li>
 
-<li>(Optional) Add the line <code>raise params.inspect</code> right at the top of the post block. Restart the app and see what happens. When you’ve had a look, make sure you remove the line again!</li>
+<li>(Optional) Add the line <code>raise params.inspect</code> right at the top of the post block. Restart the app and see what happens. When you&#39;ve had a look, make sure you remove the line again!</li>
 </ol>
 </div>
 	</div>
@@ -273,7 +273,7 @@ To git@heroku.com:arcane-gorge-2129.git
 <p>Add your work (and new <code>Gemfile.lock</code>) to your repository:</p>
 
 <pre><code> $ git add --all
- $ git commit -m 'Added Gemfile.lock'</code></pre>
+ $ git commit -m &amp;#39;Added Gemfile.lock&amp;#39;</code></pre>
 </li>
 
 <li>
@@ -392,7 +392,7 @@ To git@heroku.com:arcane-gorge-2129.git
 </li>
 
 <li>
-<p>Add a <code>div class='container'</code> around the page content, and add some styling to the <code>form</code> (see <a href='http://getbootstrap.com/css/#forms'>here</a>).</p>
+<p>Add a <code>div class=&amp;#39;container&amp;#39;</code> around the page content, and add some styling to the <code>form</code> (see <a href='http://getbootstrap.com/css/#forms'>here</a>).</p>
 </li>
 
 <li>
@@ -421,7 +421,7 @@ To git@heroku.com:arcane-gorge-2129.git
 	 <span class='s2'>&quot;Try a different helter-skelter. There&#39;s nothing for you here.&quot;</span>
 <span class='k'>end</span>
 </code></pre></div>
-<p>It the above snippet of code the <code>||</code> means or. If the person is under 12 or is smaller than 1.2m they are allowed on the ride.</p>
+<p>In the above snippet of code, the <code>||</code> means OR. If the person is under 12 or is smaller than 1.2m they are allowed on the ride.</p>
 
 <h3 id="logical_operations">Logical operations</h3>
 
@@ -451,7 +451,7 @@ To git@heroku.com:arcane-gorge-2129.git
 </code></pre></div><div class='exercise alert alert-info'><strong>Task:</strong> 
 
 <ol>
-<li>Working with a partner, see if you can guess what the following expressions evaluate to. Test in <code>irb</code> to see if you’re right.</li>
+<li>Working with a partner, see if you can guess what the following expressions evaluate to. Test in <code>irb</code> to see if you&#39;re right.</li>
 </ol>
 
 
@@ -520,7 +520,7 @@ To git@heroku.com:arcane-gorge-2129.git
 		<h2>Homework</h2>
 		<div class='exercise alert alert-info'><strong>Task:</strong>
 <ol>
-<li>Finish the final exercise from class. Spend a bit of time trying to make the app look more presentable and ‘bouncer-like’.</li>
+<li>Finish the final exercise from class. Spend a bit of time trying to make the app look more presentable and &#39;bouncer-like&#39;.</li>
 
 <li>Do the <a href='http://www.codecademy.com/tracks/ruby'>Codecademy Ruby track</a> Sections 3 and 4.</li>
 </ol>
@@ -532,7 +532,7 @@ To git@heroku.com:arcane-gorge-2129.git
 <ul>
 <li>Add more options to the form.</li>
 
-<li>Make the logic in the views more complicated, so that you’re using a few boolean operations.</li>
+<li>Make the logic in the views more complicated, so that you&#39;re using a few boolean operations.</li>
 
 <li>Change your app into a horoscope provider/career adviser/which-star-wars-character-are-you machine.</li>
 
