--- a/c4s4/index.html
+++ b/c4s4/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="utf-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
-  <title>Intro to Rails 1</title>
+  <title>Further Web Programming with Ruby</title>
 
   
 
@@ -33,7 +33,7 @@
   <div class="container">
 
     <div class="page-header">
-  <h1>Intro to Rails 1 <small>Riding the rails</small></h1>
+	<a href ="/contents/"><img src="/assets/code61_logo_66x66.png" ></a><h1>Further Web Programming with Ruby <small>Riding the rails</small></h1>
 </div>
 
 <div class="tabbable tabs-left">
@@ -118,7 +118,7 @@ vendor</code></pre>
 
 <pre><code>$ rails generate scaffold task name:string due_date:date description:text project:string completed:boolean</code></pre>
 
-<p><code>rails generate scaffold</code> tells rails to set up everything to do with the <code>task</code> model that we’re creating (more on this later). The name of the thing that you’re creating (<code>task</code> in this case) should always be <strong>singular</strong>. The final part of the command <code>name:string due_date:date description:text</code> tells rails what attributes the model should have and what type they are. The possibilities for the types are:</p>
+<p>The <code>rails generate scaffold</code> command tells rails to set up everything to do with the <code>task</code> model that we’re creating (more on this later). The name of the thing that you’re creating (<code>task</code> in this case) should always be <strong>singular</strong>. The final part of the command <code>name:string due_date:date description:text</code> tells rails what attributes the model should have and what type they are. The possibilities for the types are:</p>
 
 <pre><code>:primary_key, :string, :text, :integer, :float, :decimal, :datetime, :timestamp, :time, :date, :binary, :boolean</code></pre>
 
@@ -132,7 +132,7 @@ vendor</code></pre>
 <div class='exercise alert alert-info'><strong>Task:</strong>
 <ol>
 <li>
-<p>Before you start check that you’re running rails 4.0:</p>
+<p>Before you start check that you&#39;re running rails 4.0:</p>
 
 <pre><code> $ rails -v
  Rails 4.0.0</code></pre>
@@ -150,7 +150,7 @@ vendor</code></pre>
 <pre><code> $ cd project_manager
  $ git init
  $ git add --all
- $ git commit -m &amp;quot;Initial import&amp;quot;</code></pre>
+ $ git commit -m &amp;#39;Initial import&amp;#39;</code></pre>
 </li>
 
 <li>
@@ -173,7 +173,7 @@ vendor</code></pre>
 <p>Add everything to git:</p>
 
 <pre><code> $ git add --all
- $ git commit -m &amp;quot;Created tasks.&amp;quot;</code></pre>
+ $ git commit -m &amp;#39;Created tasks&amp;#39;</code></pre>
 </li>
 
 <li>
@@ -235,7 +235,7 @@ vendor</code></pre>
 <ol>
 <li>Read through all the actions in the <code>tasks_contoller.rb</code>.</li>
 
-<li>One-by-one try them out in your browser (e.g. by clicking on the ‘show’/’edit’/’destroy’ links on the <a href='http://localhost:3000/tasks'>localhost:3000/tasks</a> page)</li>
+<li>One-by-one try them out in your browser (e.g. by clicking on the &#39;show&#39;/&#39;edit&#39;/&#39;destroy&#39; links on the <a href='http://localhost:3000/tasks'>localhost:3000/tasks</a> page)</li>
 </ol>
 </div>
 	</div>
