--- a/extras/index.html
+++ b/extras/index.html
@@ -33,7 +33,7 @@
   <div class="container">
 
     <div class="page-header">
-  <h1>Extras <small></small></h1>
+	<a href ="/contents/"><img src="/assets/code61_logo_66x66.png" ></a><h1>Extras <small></small></h1>
 </div>
 
 <div class="tabbable tabs-left">
